--- a/env.example
+++ b/env.example
@@ -1,11 +1,11 @@
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# Gemini API Configuration
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Environment
 NODE_ENV=development
 
-# Optional: Customize OpenAI settings
-# OPENAI_MODEL=gpt-4
-# OPENAI_MAX_TOKENS=1000
-# OPENAI_TEMPERATURE=0.7
+# Optional: Customize Gemini settings
+# GEMINI_MODEL=gemini-2.0-flash
+# GEMINI_MAX_TOKENS=1000
+# GEMINI_TEMPERATURE=0.7
