--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^24.3.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -40,6 +41,8 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"daisyui": "^5.0.50"
+		"@google/genai": "^1.15.0",
+		"daisyui": "^5.0.50",
+		"openai": "^5.15.0"
 	}
 }
